# CorticalLoop

./: LICENSE  README.md  SECURITY.md
corticalloop/: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  __init__.py  config.py  loop.py  pool.py  pyproject.toml
corticalloop/adapters/: agent.py
corticalloop/corticalloop/: evaluate.py  generate.py  refine.py  types.py
corticalloop/corticalloop/utils/: jsonl.py
corticalloop/examples/: quickstart.py
corticalloop/llm/: base.py  mock.py  openai_client.py
corticalloop/tests/: test_loop.py
corticalloop/utils/: tokens.py
docs/: architecture.md  architecture.mmd  seo.md
examples/: openai_demo.py
scripts/: render_diagram.py
tests/: test_pool.py  test_records.py
