[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corticalloop"
version = "0.1.0"
description = "Neuro-inspired iterative reasoning framework for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CorticalLoop Contributors" }]
keywords = ["AI reasoning", "AI agents", "chain-of-thought", "iterative refinement", "feedback loops"]
dependencies = [
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "matplotlib>=3.8",
  "rich>=13.0",
]
openai = ["openai>=1.40"]

[tool.setuptools.packages.find]
where = ["."]
include = ["corticalloop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
